# lease-agreement

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
input_files/: blank.toml  default.toml  example.toml
output/: .gitignore  lease-blank.md
src/: hebrew_numbers.py  parse_toml.py  render.py
templates/: template.odt
