[project]
name = "lease-agreement"
version = "0.1.0"
description = ""
authors = [{ name = "Tsvika Shapira", email = "tsvikas@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "Jinja2>=3.1.5",
    "python-dateutil>=2.9.0.post0",
    "markdown-strings>=3.4.0",
    "hebrew-numbers>=0.2.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py312"]
preview = false

[tool.ruff]
target-version = "py312"
